[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Language Scene/Language_Scene.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/defaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/update_theme.tres" type="Theme" id=3]

[node name="Language_Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -138.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Select_Language_Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_right = 98.5
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "SELECT_LANGUAGE_TITLE"

[node name="Confirmation_Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -19.0
theme = ExtResource( 3 )
text = "Z_TO_CONFIRM"
align = 1
valign = 1

[node name="Pause_Button_Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -17.5
margin_right = 66.0
margin_bottom = 17.5
focus_neighbour_bottom = NodePath("EN")
focus_mode = 2

[node name="EN" type="Button" parent="Pause_Button_Container"]
margin_right = 132.0
margin_bottom = 13.0
rect_pivot_offset = Vector2( -175, 213 )
theme = ExtResource( 3 )
shortcut_in_tooltip = false
text = "SELECT_EN"

[node name="PT" type="Button" parent="Pause_Button_Container"]
margin_top = 17.0
margin_right = 132.0
margin_bottom = 30.0
theme = ExtResource( 3 )
text = "SELECT_PT"

[connection signal="focus_entered" from="Pause_Button_Container/EN" to="." method="_on_EN_focus_entered"]
[connection signal="pressed" from="Pause_Button_Container/EN" to="." method="_on_EN_pressed"]
[connection signal="focus_entered" from="Pause_Button_Container/PT" to="." method="_on_PT_focus_entered"]
[connection signal="pressed" from="Pause_Button_Container/PT" to="." method="_on_PT_pressed"]
